changed the position of the nav bar to fixed fixed so that it will stay visible at the top even if the user scrolls down.

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -7,7 +7,8 @@ nav {
   background-color: #4056A1;
   color: #FFFFFF;
   padding: 1.5em;
-  /* position: relative; */
+  position: fixed;
+  top: 0;
   z-index: 2;
 }
 
